# automated-accounts-payable

./: .gitignore  Dockerfile  Makefile  README.md  digitalocean_run.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/versions/: 03-13-22_add_image_uri_field.py  03-13-22_add_name.py  2022-02-28_initial_models.py  2022-03-26-2_add_user_and_organization_id_to_vendor.py  2022-03-26_added_categories_and_content_hash.py  2022-04-03_add_ageing_reports.py  2022-04-10_add_role_to_user_model.py  a06cc74cf02b_initial_tables.py
app/: config.py  main.py  utils.py
app/admin/: models.py  router.py
app/auth/: db_utils.py  models.py  router.py  session_utils.py  utils.py
app/db/: config.py  models.py  session.py
app/emails/: config.py  utils.py
app/frontend/: .jsbeautifyrc  package-lock.json  package.json  tailwind.config.js  templates.py
app/frontend/src/: input.css
app/frontend/static/: output.css
app/frontend/templates/: global-head.html  invoice-feed.html
app/frontend/templates/admin/: admin-home.html
app/frontend/templates/auth/: login.html  (+2 more)
app/invoices/: db_utils.py  models.py  router.py  s3_utils.py
app/invoices/ageing_report/: models.py  processor.py
app/invoices/aging_report/: processor.py
app/invoices/ocr/: models.py  textract.py
app/marketing/: router.py
app/organizations/: db_utils.py
app/payments/: config.py  db_utils.py  models.py  router.py
app/users/: db_utils.py  models.py  router.py
app/vendors/: db_utils.py  models.py  router.py
experimental_notebooks/: Pandas Building Accounts Payable Aging Report.ipynb
(+37 files in other folders)
